# ExtrapolateAndConquer

./: .gitignore  CMakeLists.txt  DemoManus.txt  ExtrapolateAndConquer.cpp  ExtrapolateAndConquer.hpp  README.md  ResourceManager.cpp  ResourceManager.hpp  WorldGen.cpp  main.cpp
AI/: CMakeLists.txt
Components/: CMakeLists.txt  Components.hpp  aux_AI.hpp
Doc/: Technical Report.aux  Technical Report.lof  Technical Report.out  Technical Report.synctex.gz(busy)  Technical Report.tex  Technical Report.toc
Doc/Cover/: cover.tex
Doc/images/: EntityComponentSystemExample.eps  EntityComponentSystemExample.graphml  Volcano1.C  Volcano1.K  Volcano1.M  Volcano1.Y  content1.C  content1.K  content1.M  content1.Y  entityComponentSystem.graphml  softwareArchitectures.graphml  volcano.C  volcano.K  volcano.M  volcano.Y  volcano2.C  volcano2.K  volcano2.M  volcano2.Y
Doc/text_files/: ai.tex  bibliography.tex  conclusions.tex  core.tex  graphics.tex  identity.tex  introduction.tex  visual_effects.tex  world_generation.tex
EntitySystem/: CMakeLists.txt  Entity.hpp  EntityManager.hpp  EntitySystem.hpp  Lists.hpp  System.hpp  Vectors.hpp  main.cpp
EntitySystem/MetaLibrary/: CMakeLists.txt  Conditional.hpp  MetaLibrary.hpp
EntitySystem/MetaLibrary/Meta/: CMakeLists.txt  Condition.hpp  FlowControl.hpp  MultiContainer.hpp  Sequence.hpp  TupleUtilities.hpp  Type.hpp  Utilities.hpp
Graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  GLWidget.cpp  GLWidget.hpp  GraphicsWidget.cpp  GraphicsWidget.hpp  GraphicsWindow.cpp  GraphicsWindow.hpp  GraphicsWindow.ui  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  Object.cpp  Object.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  Renderer.cpp  Renderer.hpp  StaticObject.cpp  StaticObject.hpp  StaticObjectList.cpp  StaticObjectList.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  World.cpp  World.hpp  WorldGen.cpp  WorldGen.hpp  WorldGenerator.cpp  WorldGenerator.hpp  glm.h  graphics_utilities.hpp  simplexnoise1234.cpp
Graphics/Models/: CMakeLists.txt
Graphics/Shaders/: CMakeLists.txt  flat.frag  phong.frag  phong.vert  phongTex.frag  phongTex.vert  plaintextureshader.frag  plaintextureshader.vert  shader.frag  skyboxShader.frag
Graphics/Shaders/FBO/: CMakeLists.txt
Models/: myMonkey.mtl
Modules/: CMakeLists.txt  glMainWindow.cpp  glMainWindow.h  glMainWindow.ui  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h  object.cpp  object.h  player.cpp  player.h
Physics/: CMakeLists.txt  Physics.txt
Shaders/: phong.frag  phong.vert  plaintextureshader.frag  plaintextureshader.vert  shader.vert
Shaders/FBO/: threshold.frag  threshold.vert
Systems/: AISystem.hpp  CMakeLists.txt  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  Systems.hpp  Systems_AI.hpp
resources/models/: CMakeLists.txt
resources/shaders/: depth.frag  depth.vert  fbo.frag  fbo.vert  flat.vert  instance.frag  instance.vert  instanceDepth.frag  instanceDepth.vert  oceanShader.frag  oceanShader.vert  phong.frag  phong.vert  phongTex.frag  phongTex.vert  skyboxShader.frag  skyboxShader.vert  terrainAtlasShader.frag  terrainMultiTextureShader.frag  terrainMultiTextureShader.vert  terrainShader.frag  terrainShader.vert  terrainShaderNoPCF.vert
